Bug 1679148 - declare template for ParamTraits, so that Thunderbird builds succeed. r=sg

Differential Revision: https://phabricator.services.mozilla.com/D97926